@@ -514,7 +514,7 @@ class StringValidator(validators.Validator):
             return None
         if isinstance(value, unicode):
             connection = state.soObject._connection
-            dbEncoding = getattr(connection, "dbEncoding", "ascii")
+            dbEncoding = getattr(connection, "dbEncoding") or "ascii"
             return value.encode(dbEncoding)
         return value
 
@@ -525,7 +525,7 @@ class StringValidator(validators.Validator):
             return value
         if isinstance(value, unicode):
             connection = state.soObject._connection
-            dbEncoding = getattr(connection, "dbEncoding", "ascii")
+            dbEncoding = getattr(connection, "dbEncoding") or "ascii"
             return value.encode(dbEncoding)
         return value
 
@@ -1485,7 +1485,7 @@ class PickleValidator(BinaryValidator):
             return None
         if isinstance(value, unicode):
             connection = state.soObject._connection
-            dbEncoding = getattr(connection, "dbEncoding", "ascii")
+            dbEncoding = getattr(connection, "dbEncoding") or "ascii"
             value = value.encode(dbEncoding)
         if isinstance(value, str):
             return pickle.loads(value)
